--- a/Bioinfa.ipynb
+++ b/Bioinfa.ipynb
@@ -65,7 +65,41 @@
         "    res += lines[j][:len(lines[j])-1] #записываем все строки в одну удаляя символы '\\n'\n",
         "  return res\n"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Afnl_8gsrj2e"
+      },
+      "source": [
+        "PAM250 = {\n",
+        "'A': {'A':2, 'R':-2, 'N':0, 'D':0, 'C':-2, 'Q':0, 'E':0, 'G': 1, 'H': -1, 'I':-1, 'L':-2, 'K':-1, 'M':-1, 'F':-3, 'P':1, 'S':1, 'T': 1, 'W':-6, 'Y':-3, 'V':0, 'B':2, 'Z':1},\n",
+        "'R': {'A':-2, 'R':6, 'N':0, 'D':-1, 'C':-4, 'Q':1,'E': -1,'G': -3, 'H': 2, 'I':-2,'L': -3, 'K':3, 'M':0, 'F':-4, 'P':0, 'S':0, 'T':-1, 'W':2, 'Y':-4, 'V':-2, 'B':1, 'Z':2},\n",
+        "'N': {'A':0, 'R':0, 'N':2, 'D':2, 'C':-4, 'Q': 1,'E': 1, 'G':0, 'H':2, 'I':-2, 'L':-3, 'K':1, 'M':-2, 'F':-3, 'P':0,'S': 1, 'T':0, 'W':-4,'Y': -2,'V': -2,'B': 4,'Z': 3},\n",
+        "'D': {'A':0, 'R':-1, 'N':2, 'D':4, 'C':-5, 'Q': 2,'E': 3,'G': 1, 'H': 1, 'I':-2, 'L':-4, 'K':0,'M': -3, 'F':-6, 'P':-1, 'S':0, 'T':0,'W': -7,'Y': -4, 'V':-2, 'B':15, 'Z':4},\n",
+        "'C': {'A':-2, 'R':-4, 'N':-4, 'D':-5, 'C':12, 'Q':-5,'E': -5,'G': -3, 'H': -3,'I': -2,'L': -6,'K': -5,'M': -5,'F': -4,'P': -3,'S': 0,'T': -2,'W': -8,'Y': 0,'V': -2,'B': -3,'Z': -4},\n",
+        "'Q': {'A':0, 'R':1, 'N':1, 'D':2, 'C':-5, 'Q': 4, 'E':2,'G': -1, 'H': 3, 'I':-2, 'L':-2,'K': 1, 'M':-1, 'F':-5,'P': 0,'S': -1,'T': -1, 'W':-5, 'Y':-4,'V': -2,'B': 3,'Z': 5},\n",
+        "'E': {'A':0, 'R':-1, 'N':1, 'D':3, 'C':-5, 'Q':2,'E': 4,'G': 0, 'H':1, 'I':-2, 'L':-3, 'K':0,'M': -2, 'F':-5,'P': -1, 'S':0,'T': 0, 'W':-7, 'Y':-4, 'V':-2, 'B':4,'Z': 5},\n",
+        "'G': {'A':1, 'R':-3, 'N':0, 'D':1, 'C':-3, 'Q': -1, 'E':0,'G': 5, 'H': -2, 'I':-3, 'L':-4,'K': -2, 'M':-3, 'F':-5, 'P':0, 'S':1,'T': 0,'W': -7, 'Y':-5, 'V':-1, 'B':2,'Z': 1},\n",
+        "'H': {'A':-1, 'R':2, 'N':2, 'D':1, 'C':-3, 'Q':3,'E': 1,'G': -2, 'H':6, 'I':-2, 'L':-2, 'K':0,'M': -2,'F': -2, 'P':0, 'S':-1,'T': -1,'W': -3, 'Y':0, 'V':-2, 'B':3, 'Z':3},\n",
+        "'I' :{'A':-1, 'R':-2, 'N':-2, 'D':-2, 'C':-2, 'Q':-2,'E': -2,'G': -3, 'H': -2,'I': 5,'L': 2,'K': -2,'M': 2,'F': 1, 'P':-2, 'S':-1,'T': 0, 'W':-5,'Y': -1,'V': 4,'B': -1, 'Z':-1},\n",
+        "'L': {'A':-2, 'R':-3, 'N':-3, 'D':-4, 'C':-6, 'Q':-2, 'E':-3, 'G':-4, 'H': -2, 'I':2, 'L':6, 'K':-3,'M': 4,'F': 2, 'P':-3, 'S':-3,'T': -2,'W': -2, 'Y':-1, 'V':2, 'B':-2, 'Z':-1},\n",
+        "'K': {'A':-1, 'R':3, 'N':1, 'D':0, 'C':-5, 'Q':1, 'E':0, 'G':-2, 'H':0, 'I':-2, 'L':-3,'K': 5,'M': 0, 'F':-5, 'P':-1, 'S':0, 'T':0, 'W':-3, 'Y':-4, 'V':-2, 'B':2, 'Z':2},\n",
+        "'M': {'A':-1, 'R':0, 'N':-2, 'D':-3, 'C':-5, 'Q':-1, 'E':-2,'G': -3, 'H': -2,'I': 2,'L': 4,'K': 0, 'M':6, 'F':0, 'P':-2, 'S':-2, 'T':-1, 'W':-4, 'Y':-2,'V': 2, 'B':-1, 'Z':0},\n",
+        "'F': {'A':-3, 'R':-4, 'N':-3, 'D':'-6','C': -4, 'Q':-5, 'E':-5, 'G':-5, 'H':-2, 'I':1,'L': 2,'K': -5,'M': 0,'F': '9','P': -5,'S': -3,'T': -3,'W': 0,'Y': 7,'V': -1,'B': -3,'Z': -4},\n",
+        "'P': {'A':1, 'R':0, 'N':0, 'D':-1, 'C':-3, 'Q': 0, 'E':-1, 'G':0, 'H':0,'I': -2,'L': -3,'K': -1,'M': -2,'F': -5,'P': 6, 'S':1, 'T':0, 'W':-6,'Y': -5, 'V':-1,'B': 1, 'Z':1},\n",
+        "'S': {'A':1, 'R':0, 'N':1, 'D':0,'C': 0, 'Q':-1, 'E':0, 'G':1, 'H': -1,'I': -1, 'L':-3, 'K':0, 'M':-2,'F': -3, 'P':1, 'S':2, 'T':1, 'W':-2,'Y': -3,'V': -1, 'B':2, 'Z':1},\n",
+        "'T': {'A':1, 'R':-1, 'N':0, 'D':0,'C': -2, 'Q':-1, 'E':0, 'G':0, 'H':-1,'I': 0,'L': -2,'K': 0, 'M':-1,'F': -3, 'P':0, 'S':1, 'T':3,'W': -5,'Y': -3,'V': 0, 'B':2, 'Z':1},\n",
+        "'W': {'A':-6, 'R':2, 'N':-4, 'D':-7,'C': -8, 'Q':-5, 'E':-7, 'G':-7, 'H':-3,'I': -5,'L': -2,'K': -3,'M': -4,'F': 0, 'P':-6,'S': -2,'T': -5, 'W':17,'Y': 0,'V': -6,'B': -4,'Z': -4},\n",
+        "'Y': {'A':-3, 'R':-4, 'N':-2, 'D':-4,'C': 0, 'Q':-4, 'E':-4, 'G':-5, 'H':0, 'I':-1,'L': -1, 'K':-4, 'M':-2,'F': 7, 'P':-5, 'S':-3, 'T':-3,'W': 0,'Y': 10,'V': -2,'B': -2, 'Z':-3},\n",
+        "'V': {'A':0, 'R':-2, 'N':-2, 'D':-2, 'C':-2, 'Q': -2,'E': -2,'G': -1, 'H': -2, 'I':4,'L': 2, 'K':-2,'M': 2,'F': -1, 'P':-1, 'S':-1, 'T':0, 'W':-6,'Y': -2, 'V':4,'B': 0, 'Z':0},\n",
+        "'B': {'A':2, 'R':1, 'N':4, 'D':5, 'C':-3, 'Q':3, 'E':4, 'G':2, 'H': 3, 'I':-1, 'L':-2,'K': 2, 'M':-1,'F': -3,'P': 1, 'S':2, 'T':2,'W': -4,'Y': -2,'V': 0,'B':6, 'Z':5},\n",
+        "'Z': {'A':1, 'R':2, 'N':3, 'D':4, 'C':-4, 'Q':5, 'E':5, 'G':1, 'H':3, 'I':-1, 'L':-1, 'K':2, 'M':0, 'F':-4,'P': 1, 'S':1, 'T':1,'W': -4, 'Y':-3, 'V':0, 'B':5, 'Z':6}\n",
+        "}"
+      ],
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -89,28 +123,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3blkrEmAfsd",
-        "outputId": "02dd20a1-6533-4e87-f68e-476f211b0a7f"
+        "outputId": "357e4cab-5242-420d-9ea1-1bfecb36f43b"
       },
       "source": [
-        "l1 = raspakovkaFA(\"line1.txt\")\n",
-        "l2 = raspakovkaFA(\"line2.txt\")\n",
-        "\n",
+        "l1 = raspakovkaFA(\"protein1.txt\").upper() #таблица PAM250 рассчитана на заглавные буквы\n",
+        "l2 = raspakovkaFA(\"protein2.txt\").upper()\n",
         "\n",
         "def vunsh(line1,line2):\n",
-        "  mismatch = input() #запрашиваем значение штрафа за несоотвествие нуклеотидов\n",
-        "  if len(mismatch) == 0: #если ничего не передали, то определим по умолчанию\n",
-        "    mismatch = -2\n",
-        "  else:\n",
-        "    mismatch = -abs(int(mismatch)) #передаваемое число может быть как < так и >0(пользователь запутался), мы работаем только с <0 по идее алгоритма\n",
-        "  gap = 0.5*mismatch\n",
+        "  typeSeq = ''\n",
+        "  nucleaAcid = ('A','T','G','C','U')\n",
+        "  for elem in l1: \n",
+        "    if elem not in nucleaAcid:\n",
+        "      typeSeq = 'protein'\n",
+        "      print('Введите значение gap:')\n",
+        "      gap = input()\n",
+        "      if len(gap) == 0: #если не передали значения, положим по умолчанию\n",
+        "        gap = -1\n",
+        "      else:\n",
+        "        gap = int(gap)\n",
+        "      break\n",
+        "  if len(typeSeq) == 0: #имеем дело с нукл. к-той\n",
+        "    typeSeq = 'nucleic'\n",
+        "    print('Введите значение mismatch:')\n",
+        "    mismatch = input() #запрашиваем значение штрафа за несоотвествие нуклеотидов\n",
+        "    if len(mismatch) == 0: #если ничего не передали, то определим по умолчанию\n",
+        "      mismatch = -2\n",
+        "    else:\n",
+        "      mismatch = int(mismatch)\n",
+        "    gap = 0.5*mismatch\n",
         "  len1 = len(line1) #вертикаль line2, горизонталь line1\n",
         "  len2 = len(line2)\n",
         "\n",
         "  def equal(x,y):\n",
-        "    if x == y:\n",
-        "      return -mismatch #match\n",
+        "    if typeSeq == 'protein':\n",
+        "      return PAM250[x][y]\n",
         "    else:\n",
-        "      return mismatch\n",
+        "      if x == y:\n",
+        "        return -mismatch #match\n",
+        "      else:\n",
+        "        return mismatch\n",
         "\n",
         "  def table(line1,line2):\n",
         "    F = [[0 for _ in range(len1 + 1)] for _ in range(len2 + 1)]   #массив для заполнения, (+1) засчет вспомогательных ячеек\n",
@@ -157,18 +208,30 @@
         "\n",
         "vunsh(l1,l2)"
       ],
-      "execution_count": 21,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "A T G _ _ C _ _ _ C G T C T G A T G T C G G A A T A C G G\n",
-            "G T G A A C A A A C G G C T G _ T _ T T T G C A _ G C C G\n"
+            "Введите значение gap:\n",
+            "-8\n",
+            "E A E D L Q V G Q V E L G G G P G A G S L Q P L A L E G S L Q K R G I V E Q C C T S I C S L Y Q L E N Y C N\n",
+            "M A _ _ L W M _ R L _ L _ _ _ P _ L _ _ L A L L A L W G P D P A A A F V N Q _ _ _ H L C G _ S H L V E _ A L\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bFn1yCiauclD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 22,
+      "outputs": []
     }
   ]
 }
