--- a/Bioinfa.ipynb
+++ b/Bioinfa.ipynb
@@ -65,7 +65,7 @@
         "    res += lines[j][:len(lines[j])-1] #записываем все строки в одну удаляя символы '\\n'\n",
         "  return res\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "'Z': {'A':1, 'R':2, 'N':3, 'D':4, 'C':-4, 'Q':5, 'E':5, 'G':1, 'H':3, 'I':-1, 'L':-1, 'K':2, 'M':0, 'F':-4,'P': 1, 'S':1, 'T':1,'W': -4, 'Y':-3, 'V':0, 'B':5, 'Z':6}\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,11 +123,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3blkrEmAfsd",
-        "outputId": "357e4cab-5242-420d-9ea1-1bfecb36f43b"
+        "outputId": "32a5dc61-87b2-4339-b689-16cf1b01eb98"
       },
       "source": [
-        "l1 = raspakovkaFA(\"protein1.txt\").upper() #таблица PAM250 рассчитана на заглавные буквы\n",
-        "l2 = raspakovkaFA(\"protein2.txt\").upper()\n",
+        "l1 = raspakovkaFA(\"line1.txt\").upper() #таблица PAM250 рассчитана на заглавные буквы\n",
+        "l2 = raspakovkaFA(\"line2.txt\").upper()\n",
         "\n",
         "def vunsh(line1,line2):\n",
         "  typeSeq = ''\n",
@@ -208,30 +208,19 @@
         "\n",
         "vunsh(l1,l2)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Введите значение gap:\n",
+            "Введите значение mismatch:\n",
             "-8\n",
-            "E A E D L Q V G Q V E L G G G P G A G S L Q P L A L E G S L Q K R G I V E Q C C T S I C S L Y Q L E N Y C N\n",
-            "M A _ _ L W M _ R L _ L _ _ _ P _ L _ _ L A L L A L W G P D P A A A F V N Q _ _ _ H L C G _ S H L V E _ A L\n"
+            "A T G _ _ C _ _ _ C G T C T G A T G T C G G A A T A C G G\n",
+            "G T G A A C A A A C G G C T G _ T _ T T T G C A _ G C C G\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bFn1yCiauclD"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 22,
-      "outputs": []
     }
   ]
 }
